--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -35,6 +35,7 @@
 @import './min_width_812px';
 @import './min_width_896px';
 @import './min_width_1000px';
+@import './min_width_1024px';
 @import './min_width_1280px';
 @import './min_width_1336px';
 @import './min_width_1366px';
@@ -43,6 +44,7 @@
 @import './min_width_2500px';
 @import './min_width_2800px';
 @import './min_width_5000px';
+
 
 *{
     box-sizing: border-box;
