--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -71,6 +71,21 @@
   top: 0px;
 }
 
+.notification {
+  position: absolute;
+  top: 320px;
+  left: 40px;
+  width: 200px;
+  height: auto;
+  background: rgba(2, 151, 219, 0.4);
+  padding: 20px 20px 0 20px;
+  border-radius: 20px;
+}
+
+.notification img {
+  width: 40%;
+}
+
 .shelf {
   width: 150px;
   height: 20px;
