importss notification.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -2,6 +2,7 @@
 @import './myname';
 @import './css_art';
 @import './clock';
+@import './notification';
 @import './shelf';
 @import './calendar';
 @import './book_holder';
@@ -20,7 +21,7 @@
 @import './window';
 @import './floor';
 @import './react_awesome_slider';
-@import './min_width_300px';
+@import './min_width_280px';
 @import './min_width_350px';
 @import './min_width_375px';
 @import './min_width_411px';
