changes styling for min_width_1000px.scss

--- a/src/STYLES/_min_width_1000px.scss
+++ b/src/STYLES/_min_width_1000px.scss
@@ -2,8 +2,29 @@
    iPad Air 1 & 2 => 1024 x 768 # Horizontal*/
 @media only screen and (min-width: 1000px){
     .postits{
+        left: -170px;
         top:700px;
-        left: -440px;
+        p{
+            padding-top: 150px;
+        }
+        .post-it-1, .post-it-2, .post-it-3, .post-it-4{
+           width:350px;
+           height: 350px;
+           &:after{
+                width:350px;
+                height: 350px;
+            }
+        }
+        .post-it-2{
+            left: 800px;
+        }
+        .post-it-3{
+            top: 490px;
+        }
+        .post-it-4{
+            left: 800px;
+            top:490px;
+        }
     }
 
     .floor{
@@ -12,12 +33,8 @@
 
     .awssld, .bio-card, .contact-card{
         top: 790px;
-        left: 50px;
-    }
-
-    .bio-img-container img{
-        margin: 130px auto;
-        width: 150%;
+        left: 100px;
+        height: 750px !important;
     }
 
     .project-div{
@@ -29,6 +46,14 @@
                 top: -170px;
             }
         }
+    }
+
+    .bio .text-container{
+        padding: 100px 0 20px 60px;
+    }
+
+    .bio-img-container img{
+        margin: 80px auto;
     }
 
     .text-container{
