--- a/src/STYLES/_min_width_760px.scss
+++ b/src/STYLES/_min_width_760px.scss
@@ -11,20 +11,40 @@
     }
 
     .postits{
-        left:-470px;
-        top: 700px;
+        left: -170px;
+        top:700px;
+        p{
+            padding-top: 150px;
+        }
+        .post-it-1, .post-it-2, .post-it-3, .post-it-4{
+           width:350px;
+           height: 350px;
+           &:after{
+                width:350px;
+                height: 350px;
+            }
+        }
+        .post-it-2{
+            left: 800px;
+        }
+        .post-it-3{
+            top: 490px;
+        }
+        .post-it-4{
+            left: 800px;
+            top:490px;
+        }
     }
 
     .awssld, .bio-card, .contact-card{
         top: 800px;
-        left: 10px;
-        width: 1130px !important;
-        height: 1100px !important;
+        left: 120px;
+        width: 930px !important;
+        height: 750px !important;
     }
 
     .bio-img-container img{
         margin: 140px auto;
-        width: 160%;
     }
 
     .project-div{
