--- a/src/STYLES/_min_width_812px.scss
+++ b/src/STYLES/_min_width_812px.scss
@@ -3,15 +3,50 @@
    Pixel 2 XL => 823 x 411 # Horizontal done*/
 @media only screen and (min-width: 812px){
     .postits{
-        top: 750px;
-        left: -445px;
+        left:-20px;
+        top:720px;
+        p{
+            padding-top: 100px;
+        }
+        .post-it-1, .post-it-2, .post-it-3, .post-it-4{
+            width:250px;
+            height: 250px;
+            left: 350px;
+            &:after{
+                width: 250px;
+                height: 250px;
+            }
+        }
+
+        .post-it-3{
+            top: 390px;
+        }
+
+        .post-it-2{
+            left: 650px;
+        }
+
+        .post-it-4{
+            left: 650px;
+            top: 390px;
+        }
     }
 
     .awssld, .bio-card, .contact-card{
-        top: 845px;
-        left: 45px;
+        top: 800px;
+        left: 120px;
+        width: 1000px !important;
+        height: 560px !important;
     }
 
+    .bio .text-container{
+        padding: 20px 0 10px 10px;
+        line-height: normal;
+    }
+
+    .bio-img-container img{
+        margin: 0px auto;
+    }
     .codepen-div{
         width: 29%;
         height: 300px;
