--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: left;
     margin: 0;
-    padding: 4em;
+    padding: 30px;
     position: absolute;
 }
 
@@ -47,21 +47,21 @@
 }
 
 .bio-img-container{
-    width: 30%;
+    width: 40%;
     img{
         margin: 40px auto;
-        width: 80%;
+        // width: 80%;
         height: auto;
-        border-radius: 15px;
+        border-radius:10px 50% 10px 50%;
     }
 }
 
 .text-container{
     position: relative;
     box-sizing: border-box;
-    width: 60%;
+    width: 50%;
     height: auto;
-    padding: 70px 0 0 60px;
+    padding: 30px 0 30px 30px;
     line-height: 40px;
 }
 
@@ -73,7 +73,7 @@
     margin: 0;
     text-align: center;
     color: white;
-    padding-left: 5em;
+    // padding-left: 5em;
 }
 
 .project-div{
